Z-index problem solved

--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -164,7 +164,6 @@
     margin-top       : 13px;
 }
 .newDesign #content-application{
-    z-index: initial;
 }
 
 /* intro toolbar inputs */
